--- a/_include/nvme/reuse_enabling_on_windows_init_host.adoc
+++ b/_include/nvme/reuse_enabling_on_windows_init_host.adoc
@@ -1,4 +1,4 @@
-Follow these steps to enable FC/NVMe on the Windows initiator host:
+Enable FC/NVMe on the Windows initiator host.
 
 .Steps
 . Install OneCommand Manager utility on the Windows host.
