Minor edits to registry settings

--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -15,7 +15,7 @@ summary: Windows Host Utilities includes an installation program that sets the r
 [.lead]
 The Windows Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
 
-The Windows Host Utilities supports the following versions of Windows:
+The Windows Host Utilities support the following versions of Windows:
 
 * Windows 2025
 * Windows 2022
