Adding collapsible option to Windows outputs and other minor edits

--- a/_include/nvme/reuse-nvme-validate-nvme-of.adoc
+++ b/_include/nvme/reuse-nvme-validate-nvme-of.adoc
@@ -1,1 +1,1 @@
-To support correct operation for ONTAP LUNs, verify that the in-kernel NVMe multipath status, ANA status, and ONTAP namespaces are correct for the NVMe-oF configuration.
+Verify that the in-kernel NVMe multipath status, ANA status, and ONTAP namespaces are correct for the NVMe-oF configuration.
