--- a/_include/windows/reuse_windows_hotfix_install.adoc
+++ b/_include/windows/reuse_windows_hotfix_install.adoc
@@ -1,5 +1,5 @@
 
-NOTE: You need to contact Microsoft support for the hotfixes that aren't available for download from the Microsoft support site.
+NOTE: You need to contact Microsoft support for the hotfixes that aren't available for download from the Microsoft Update Catalog.
 
 [start=2]
 . Follow the instructions provided by Microsoft to install the hotfixes.
