--- a/hu_windows_2025.adoc
+++ b/hu_windows_2025.adoc
@@ -19,7 +19,7 @@ You can use the ONTAP SAN host configuration settings to configure Windows Serve
 include::_include/windows/reuse_windows_booting_OS.adoc[]
 
 == Install Windows hotfixes
-NetApp recommends installing the *latest cumulative update* on the server.
+NetApp recommends installing the *latest cumulative update* available from the Microsoft Update Catalog on the host server.
 
 .Steps
 
