replace underscore with hyphen for Windows 2025 adocs

--- a/hu-windows-2025.adoc
+++ b/hu-windows-2025.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: hu_windows_2025.html
+permalink: hu-windows-2025.html
 keywords: windows, enterprise
 summary: You can use the ONTAP SAN host configuration settings to configure Windows Server 2025 for operation with ONTAP storage.
 ---
