--- a/nvme-windows-2025.adoc
+++ b/nvme-windows-2025.adoc
@@ -1,6 +1,6 @@
 ---
 sidebar: sidebar
-permalink: nvme_windows_2025.html
+permalink: nvme-windows-2025.html
 keywords: nvme, windows, enterprise
 summary: NVMe/FC Host Configuration for Windows Server 2052 with ONTAP
 ---
