Update includes for Windows 2022

--- a/hu-windows-2025.adoc
+++ b/hu-windows-2025.adoc
@@ -23,7 +23,7 @@ NetApp recommends installing the *latest cumulative update* available from the M
 
 .Steps
 
-. Download the hotfixes from the link:https://www.catalog.update.microsoft.com/Search.aspx?q=update%20%22windows%20server%202025%22[Microsoft Update Catalog^].
+. Download the hotfixes from the link:https://www.catalog.update.microsoft.com/Search.aspx?q=update%20%22windows%20server%202025%22[Microsoft Update Catalog 2025^].
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
 
