--- a/hu_windows_2016.adoc
+++ b/hu_windows_2016.adoc
@@ -13,46 +13,40 @@ summary: Using Windows Server 2016 with ONTAP
 :imagesdir: ./media/
 
 [.lead]
-You can use the ONTAP SAN host configuration settings to configure Windows server 2016 with ONTAP as the target. 
+You can use the ONTAP SAN host configuration settings to configure Windows Server 2016 for operation with ONTAP storage. 
 
-== Booting the OS
+== Boot the Windows OS
 include::_include/windows/reuse_windows_booting_OS.adoc[]
-
-=== SAN booting
-include::_include/windows/reuse_windows_san_booting.adoc[]
 
 include::_include/hu/reuse_hu_cloud_note.adoc[]
 
-
 == Install Windows hotfixes
-NetApp recommends that the *latest cumulative update* is installed on the server.
+NetApp recommends installing the *latest cumulative update* available from the Microsoft Update Catalog on the host server.
 
-NOTE: Go to the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2016[Microsoft Update Catalog 2016^] website to obtain and install the required Windows hotfixes for your version of Windows.
+.Steps
+
+. Download the hotfixes from the link:https://www.catalog.update.microsoft.com/Search.aspx?q=Update+Windows+Server+2016[Microsoft Update Catalog 2016^].
 
 include::_include/windows/reuse_windows_hotfix_install.adoc[]
-
 
 == Install the Windows Host Utilities
 include::_include/windows/reuse_windows_installing_WUHU.adoc[]
 
-
 == Multipathing
 include::_include/windows/reuse_windows_multipathing.adoc[]
 
-NOTE: When you select MPIO, the Windows Host Utilities enables the included MPIO feature of Windows Server 2016.
+The MPIO software presents a single disk to the Windows OS for all paths, and a device-specific module (DSM) manages path failover. On a Windows system, the two main components in any MPIO solution are the DSM and the Windows MPIO. When you select MPIO support, the Windows Host Utilities enables the MPIO feature included in Windows Server 2016. 
+
+NOTE: Windows XP or Windows Vista running in a Hyper-V virtual machine doesn't support MPIO.
 
 == SAN configuration
+include::_include/windows/reuse_windows_asa_configuration.adoc[]
+
 === Non-ASA configuration
 include::_include/windows/reuse_windows_non_asa_configuration.adoc[]
 
-
-=== All SAN array configuration
-include::_include/windows/reuse_windows_asa_configuration.adoc[]
-
-
 == Recommended settings
 include::_include/windows/reuse_windows_recommended_settings.adoc[]
-
 
 == Known issues
 There are no known issues for the Windows Server 2016 with ONTAP release.
