--- a/_include/windows/reuse_windows_booting_OS.adoc
+++ b/_include/windows/reuse_windows_booting_OS.adoc
@@ -10,7 +10,7 @@ Perform a local boot by installing the Windows OS on the local hard disk (SSD, S
 
 .SAN boot
 --
-If you opt to use SAN booting, it must be supported by your configuration.
+If you choose to use SAN booting, it must be supported by your configuration.
 
 .Before you begin
 Use the https://mysupport.netapp.com/matrix/#welcome[Interoperability Matrix Tool^] to verify that your Windows OS, host bus adapter (HBA), HBA firmware, HBA boot BIOS, and ONTAP version support SAN booting.
