--- a/_include/windows/reuse_windows_non_asa_configuration.adoc
+++ b/_include/windows/reuse_windows_non_asa_configuration.adoc
@@ -1,5 +1,5 @@
 A non-ASA configuration should have two groups of paths with different priorities. The paths with higher priorities are Active/Optimized. This means the Active/Optimized paths are serviced by the controller where the aggregate is located. The paths with lower priorities are active but non-optimized because they are served from a different controller. The non-optimized paths are only used when optimized paths aren't available.
 
-The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two active/non-optimized paths.
+The following example displays the correct output for an ONTAP LUN with two Active/Optimized paths and two Active/Non-Optimized paths.
 
 image::nonasa.png[Screenshot of an ONTAP LUN with two active/optimized paths and two active/non-optimized paths]
