Content improvements for Windows nvme versions

--- a/nvme-windows-2025.adoc
+++ b/nvme-windows-2025.adoc
@@ -21,12 +21,12 @@ You can use the following support with the NVMe/FC host configuration for Window
 * Support available:
 +
 Beginning with ONTAP 9.10.1, NVMe/FC is supported for Windows Server 2025.
++
+include::_include/nvme/reuse_supportability_notes.adoc[]
 
 * Known limitations:
 +
-Windows Failover Cluster (WFC) isn't supported with NVMe/FC because ONTAP doesn't currently support persistent reservations with NVMe/FC.
-+
-NOTE: Broadcom ships an external driver for Windows NVMe/FC that is a translational SCSI ⇄ NVMe driver and not a true NVMe/FC driver. The translational overhead doesn't necessarily impact performance, but it does negate the performance benefits of NVMe/FC. As a result,  NVMe/FC and FCP performance is the same on Windows servers, unlike other operating systems such as Linux, where NVMe/FC performance is significantly better than that of FCP.
+include::_include/nvme/reuse-nvme-windows-wfc-limitation.adoc[]
 
 == Enable NVMe/FC 
 
