--- a/_include/nvme/reuse_enabling_on_windows_init_host.adoc
+++ b/_include/nvme/reuse_enabling_on_windows_init_host.adoc
@@ -7,6 +7,7 @@ Enable FC/NVMe on the Windows initiator host.
 +
 * EnableNVMe = 1
 * NVMEMode = 0
-* LimTransferSize=1
 +
 . Reboot the host.
+
+// 2025 FEB 14, ONTAPDOC-2521
