--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -29,7 +29,11 @@ You must manually set the iSCSI HBA parameters.
 The installer sets different values depending on whether you specify Microsoft Multipath I/O (MPIO) support when running the installation program.
 
 [NOTE]
-You should not change these values unless NetApp technical support directs you to do so.
+====
+You need to change the LimTransferSize parameter value after installing Windows Host Utilities 7.2, see <<nvme_parameters, NVMe parameters>>.
+
+For all other parameters and registry keys for Windows Host Utilities 7.2 and 7.1, you should not change the values unless technical support tells you to do so.
+====
 
 == Registry values set by Windows Host Utilities 7.2
 
@@ -53,7 +57,7 @@ HKLM is the abbreviation for `HKEY_LOCAL_MACHINE`.
 \Services\msdsm\Parameters
 \DsmMaximumStateTransitionTime
 |120
-|When MPIO support is specified and your server is Windows Server 2022, 2019, 2016, or 2012 R2
+|When MPIO support is specified and your server is Windows Server 2025, 2022, 2019, 2016, or 2012 R2
 |HKLM\SYSTEM\CurrentControlSet\Services
 \msdsm\Parameters\DsmSupportedDeviceList
 |"NETAPP LUN", "NETAPP LUN C-
@@ -118,7 +122,7 @@ Mode",
 |HKLM\SYSTEM\CurrentControlSet\Services\vnetapp
 \Parameters\PDORemovePeriod
 |130
-|When MPIO support is specified, except if Data ONTAP DSM is detected
+|When MPIO support is specified
 |HKLM\SYSTEM\CurrentControlSet\Services\mpio
 \Parameters\RetryCount
 |6
@@ -149,7 +153,7 @@ Mode",
 |When MPIO support is specified and your server is  Windows Server 2025, 2022, 2019, 2016, or 2012 R2
 |===
 
-
+[[nvme_parameters]]
 === NVMe parameters
 
 The following NVMe Emulex driver parameters are updated when installing Windows Host Utilities 7.2:
@@ -157,9 +161,8 @@ The following NVMe Emulex driver parameters are updated when installing Windows 
 * EnableNVMe = 1
 * NVMEMode = 0
 * LimTransferSize=1
- 
-
-
++
+The LimTransferSize parameter is automatically set to "1" when you install Windows Host Utilities 7.2. After installation, you need to manually change LimTransferSize to "0" and reboot the server.
 
 == Registry values set by Windows Host Utilities 7.1
 
@@ -424,3 +427,4 @@ A list of HBAs appears in the FC HBA pane.
 --
 ====
 
+// 2025 FEB 14, ONTAPDOC-2521
