--- a/_include/nvme/reuse_supportability_notes.adoc
+++ b/_include/nvme/reuse_supportability_notes.adoc
@@ -1,1 +1,1 @@
-See the link:https://hwu.netapp.com/Home/Index[Hardware Universe^] for a list of supported FC adapters and controllers. For the current list of supported configurations and versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+For a list of supported FC adapters and controllers, see the link:https://hwu.netapp.com/Home/Index[Hardware Universe^]. For the current list of supported configurations and versions, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
