--- a/_include/nvme/reuse_enabling_on_windows_init_host.adoc
+++ b/_include/nvme/reuse_enabling_on_windows_init_host.adoc
@@ -1,7 +1,7 @@
 Enable FC/NVMe on the Windows initiator host.
 
 .Steps
-. Install Emulex HBA Manager utility on the Windows host.
+. Install the Emulex HBA Manager utility on the Windows host.
 
 . On each of the HBA initiator ports, set the following HBA driver parameters:
 +
