--- a/_include/hu/asa-configuration-intro-and-all-asa-example.adoc
+++ b/_include/hu/asa-configuration-intro-and-all-asa-example.adoc
@@ -1,4 +1,6 @@
 In ASA and non-ASA configurations, a single ONTAP LUN shouldn't require more than four paths. If there are more than four paths, it might cause issues with the paths during a storage failure. In the following examples, the outputs show the correct settings for the ONTAP LUN.
 
-.All ASA configuration
+.ASA configuration
+An ASA configuration optimizes all paths to a given LUN, keeping them active. This improves performance by serving I/O operations through all paths at the same time. 
+
 The following example displays the `multipath -ll` output for an ONTAP LUN with an ASA configuration:
