--- a/hu_sles_15SP6.adoc
+++ b/hu_sles_15SP6.adoc
@@ -26,20 +26,98 @@ include::_include/hu/enable-san-boot-linux.adoc[]
 
 You can use multipathing with SUSE Linux Enterprise Server 15 SP6 to manage ONTAP LUNs. 
 
-To use multipathing, the `/etc/multipath.conf file` must exist. If the `/etc/multipath.conf` file doesn't exist, you can create an empty, zero-byte file by using the `touch /etc/multipath.conf` command. You don't need to make changes to the `/etc/multipath.conf` zero-byte file because SUSE Linux Enterprise Server 15 SP6 is compiled with the settings (recommended settings) required to recognize and correctly manage ONTAP LUNs. 
+include::_include/hu/multipathing.adoc[]
 
-SUSE Linux Enterprise Server 15 SP6 also configures the parameters for all SAN Array (ASA) and non-ASA configurations.
 
-include::_include/hu/configure-multipathing-and-optimize-performance-intro.adoc[]
+=== Use multipathing to optimize performance
+You can use the `multipath.conf` file to optimize the performance of your host configuration.
 
-* <<restore-recommended-setting-slessp15sp6,Restore recommended settings for ONTAP LUNs>>
+.Exclude a device from multipath
 
-[[exclude-devices]]
+If you want to exclude a device from multipath, you can add the WWID for the unwanted device to the "blacklist" for the `multipath.conf` file using the following device stanza:
 
-include::_include/hu/blacklist-devices.adoc[]
+----
+blacklist {
+        wwid <DevId>
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
 
-[[restore-recommended-setting-slessp15sp6]]
-include::_include/hu/restore-recommended-settings.adoc[]
+The following example determines a WWID and adds it to a "blacklist" stanza.
+
+.Steps
+. Determine the WWID:
++
+`# /lib/udev/scsi_id -gud /dev/sda`
++
+`360030057024d0730239134810c0cb833`
++
+"sda" is the local SCSI disk that you want to add it to the blacklist.
+
+. Add the WWID to the "blacklist" stanza in `/etc/multipath.conf`:
++
+----
+blacklist {
+	     wwid   360030057024d0730239134810c0cb833
+        devnode "^(ram|raw|loop|fd|md|dm-|sr|scd|st)[0-9]*"
+        devnode "^hd[a-z]"
+        devnode "^cciss.*"
+}
+----
+
+
+.Recommended settings for ONTAP LUNs
+You should always check your `/etc/multipath.conf` file, especially in the defaults section, for legacy settings that might be overriding the default settings. 
+
+The following table shows the critical multipathd parameters for ONTAP LUNs. These parameters are compiled with native device mapper multipath libraries. If a host is connected to LUNs from other vendors and any of these parameters are overridden, you need to correct them by using stanzas later in the multipath.conf file that apply specifically to ONTAP LUNs. If you don't do this, the ONTAP LUNs might not work as expected. You should only override these default settings in consultation with NetApp support, an OS vendor, or both, and only when the impact is fully understood.
+
+[cols=2]
+[options="header"]
+|===
+| Parameter
+| Setting
+| detect_prio | yes
+| dev_loss_tmo | "infinity"
+| failback | immediate
+| fast_io_fail_tmo | 5
+| features | "2 pg_init_retries 50"
+| flush_on_last_del | "yes"
+| hardware_handler | "0"
+| no_path_retry | queue
+| path_checker | "tur"
+| path_grouping_policy | "group_by_prio"
+| path_selector | "service-time 0"
+| polling_interval | 5
+| prio | "ontap"
+| product | LUN.*
+| retain_attached_hw_handler | yes
+| rr_weight | "uniform"
+| user_friendly_names | no
+| vendor | NETAPP
+|===
+
+The following example shows how to correct an overriden default setting in a `multipath.conf` file that defines values for `path_checker` and `no_path_retry` that aren't compatible with ONTAP LUNs. In this case, you cannot remove these parameters because SAN arrays are attached to the host. Instead, you can correct the values to "queue" and "tur" by adding a device stanza to the `multipath.conf` file that applies specifically to the ONTAP LUNs.
+
+[subs=+quotes]
+----
+defaults {
+   path_checker      *readsector0*
+   no_path_retry     *fail*
+}
+
+devices {
+   device {
+      vendor          "NETAPP"
+      product         "LUN"
+      no_path_retry   *queue*
+      path_checker    *tur*
+   }
+}
+----
+
+
 
 === Examples of all ASA and non-ASA configurations
 include::_include/hu/asa-configuration-intro-and-all-asa-example.adoc[]
