--- a/_include/hu/multipathing.adoc
+++ b/_include/hu/multipathing.adoc
@@ -1,20 +1,13 @@
-To use multipathing, the `/etc/multipath.conf file` must exist. If the `/etc/multipath.conf` file doesn't exist, you need to create an empty, zero-byte file:
-
-[source,cli]
-----
-`touch /etc/multipath.conf`
-----
-
 The first time you create the `multipath.conf` file, you might need to enable and start the multipath services: 
 
 [source,cli]
 ----
-`# systemctl enable multipathd`
+# systemctl enable multipathd
 ----
 
 [source,cli]
 ----
-`# systemctl start multipathd`
+# systemctl start multipathd
 ----
 
 You don't need to make changes to the `/etc/multipath.conf` zero-byte file for SUSE Linux Enterprise Server 15 SP6 because the operating system is compiled with the multipath parameters that recognize and manage ONTAP LUNs correctly. 
@@ -27,5 +20,5 @@ You can use the following multipath command verify the settings for your ONTAP L
 
 [source,cli]
 ----
-`multipath -ll`
+multipath -ll
 ----
